fix: show an error toast for errors during subcase submission

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1322,5 +1322,6 @@
   "general-information": "Algemene info",
   "government-areas-and-fields": "Beleidsdomeinen en beleidsvelden",
   "save-in-progress": "Bezig met opslaan.",
-  "documents-creating-progress-message": "{count} van {total} documenten aangemaakt."
+  "documents-creating-progress-message": "{count} van {total} documenten aangemaakt.",
+  "error-while-submitting-subcase-on-meeting": "Er ging iets mis tijdens het agenderen van de procedurestap: {error}"
 }
