--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1280,10 +1280,10 @@
   "decision-not-published-yet": "Beslissing is nog niet vrijgegeven",
   "decision-not-published-yet-may-be-altered": "De beslissing is nog niet goedgekeurd op de Ministerraad. Een wijziging is nog mogelijk.",
   "flemish-parliament": "Vlaams Parlement",
-  "this-case-was-submitted-on": "Dit dossier is doorgestuurd op",
-  "this-case-was-submitted-to-VP-on": "Dit dossier is doorgestuurd naar het Vlaams Parlement op",
+  "this-case-was-submitted-on": "Dit dossier is ingediend op",
+  "this-case-was-submitted-to-VP-on": "Dit dossier is ingediend bij het Vlaams Parlement op",
   "error-while-sending-to-VP-message": "Er ging iets fout tijdens het indienen bij het Vlaams Parlement. Probeer het opnieuw. Als het probleem niet opgelost is, neem dan contact op met kaleidos.servicedesk@vlaanderen.be. Gelieve volgende boodschap te vermelden:",
-  "case-was-sent-to-VP": "Dossier is succesvol verstuurd naar het Vlaams Parlement",
+  "case-was-sent-to-VP": "Dossier is succesvol ingediend bij het Vlaams Parlement",
   "for": "Voor",
   "minutes-next-meeting": "De volgende vergadering van de Vlaamse Regering heeft plaats op {date} om {time} op het kabinet van de minister-president van de Vlaamse Regering, Martelaarsplein 19 - 1000 Brussel.",
   "postponed-item-decision": "Dit punt wordt uitgesteld tot de volgende vergadering.",
