--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1324,7 +1324,5 @@
   "save-in-progress": "Bezig met opslaan.",
   "documents-creating-progress-message": "{count} van {total} documenten aangemaakt.",
   "error-while-submitting-subcase-on-meeting": "Er ging iets mis tijdens het agenderen van de procedurestap: {error}",
-  "search-case-title": "Zoek op dossiernaam",
-  "no-subcases-yet-pill": "Geen procedurestappen",
-  "no-status-yet-pill": "Geen status"
+  "search-case-title": "Zoek op dossiernaam"
 }
