--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1278,6 +1278,7 @@
   "principal-approval": "Principiële goedkeuring",
   "this-case-is-being-handled-by-VP": "Volg het dossier op in het",
   "decision-not-published-yet": "Beslissing is nog niet vrijgegeven",
+  "documents-not-published-yet": "Documenten zijn nog niet vrijgegeven",
   "decision-not-published-yet-may-be-altered": "De beslissing is nog niet goedgekeurd op de Ministerraad. Een wijziging is nog mogelijk.",
   "flemish-parliament": "Vlaams Parlement",
   "this-case-was-submitted-on": "Dit dossier is ingediend op",
@@ -1325,7 +1326,9 @@
   "government-areas-and-fields": "Beleidsdomeinen en beleidsvelden",
   "save-in-progress": "Bezig met opslaan.",
   "documents-creating-progress-message": "{count} van {total} documenten aangemaakt.",
-  "agendaitem-is-status-no-documents-available": "Dit agendapunt is {status}. Er zijn geen documenten beschikbaar",
-  "agendaitem-document-postponed-or-retracted--message": "De documenten van een {status} agendapunt zijn niet zichtbaar voor de gebruikers van een overheidsorganisatie of het Vlaams Parlement. De toegangsrechten 'publiek' of 'intern overheid' zijn op de documenten van een {status} punt niet van toepassing.",
+  "agendaitem-postponed-no-documents-available": "Dit agendapunt is uitgesteld. Er zijn geen documenten beschikbaar.",
+  "agendaitem-retracted-no-documents-available": "Dit agendapunt is ingetrokken. Er zijn geen documenten beschikbaar.",
+  "agendaitem-document-postponed--message": "De documenten van een uitgesteld agendapunt zijn niet zichtbaar voor de gebruikers van een overheidsorganisatie of het Vlaams Parlement. De toegangsrechten 'publiek' of 'intern overheid' zijn op de documenten van een uitgesteld punt niet van toepassing.",
+  "agendaitem-document-retracted--message": "De documenten van een ingetrokken agendapunt zijn niet zichtbaar voor de gebruikers van een overheidsorganisatie of het Vlaams Parlement. De toegangsrechten 'publiek' of 'intern overheid' zijn op de documenten van een ingetrokken punt niet van toepassing.",
   "error-while-submitting-subcase-on-meeting": "Er ging iets mis tijdens het agenderen van de procedurestap: {error}"
 }
