--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1342,7 +1342,7 @@
   "search-case-title": "Zoek op dossiernaam",
   "agendaitem-postponed-no-documents-available": "Dit agendapunt is uitgesteld. Er zijn geen documenten beschikbaar.",
   "agendaitem-retracted-no-documents-available": "Dit agendapunt is ingetrokken. Er zijn geen documenten beschikbaar.",
-  "agendaitem-document-postponed--message": "De documenten van een uitgesteld agendapunt zijn niet zichtbaar voor de gebruikers van een overheidsorganisatie of het Vlaams Parlement. De toegangsrechten 'publiek' of 'intern overheid' zijn op de documenten van een uitgesteld punt niet van toepassing.",
+  "agendaitem-document-postponed--message": "De documenten van uitgestelde agendapunten zijn niet zichtbaar voor de overheid.",
   "agendaitem-document-retracted--message": "De documenten van een ingetrokken agendapunt zijn niet zichtbaar voor de gebruikers van een overheidsorganisatie of het Vlaams Parlement. De toegangsrechten 'publiek' of 'intern overheid' zijn op de documenten van een ingetrokken punt niet van toepassing.",
   "search-not-allowed-during-reordering": "Zoeken is niet mogelijk tijdens het aanpassen van de volgorde",
   "all-agendas": "Alle agenda's",
