--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1353,5 +1353,8 @@
   "case-actions": "Dossier acties",
   "check-documents-to-be-sent-to-vp": "Vink de documenten aan die je naar het Vlaams Parlement wilt doorsturen.",
   "possible-pieces-missing": "Kijk na of de bovenstaande lijst volledig is.",
-  "automatic-check-performed-possible-pieces-missing":"Op basis van een automatische controle lijken de volgende documenten te ontbreken. Wil je ze toch indienen? Laad ze dan op en stuur ze vervolgens door."
+  "automatic-check-performed-possible-pieces-missing":"Op basis van een automatische controle lijken de volgende documenten te ontbreken. Wil je ze toch indienen? Laad ze dan op en stuur ze vervolgens door.",
+  "case-info": "Dossier info",
+  "design-of": "Ontwerp van",
+  "last-statusses": "Laatste statussen"
 }
