KAS-4590 added signatures for ratifications

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1357,6 +1357,8 @@
   "add-past-minister": "Vorige minister toevoegen",
   "remove-past-minister": "Vorige minister verwijderen",
   "ratification": "Bekrachtiging",
+  "ratifications": "Bekrachtigingen",
+  "ratifications-ongoing": "Bekrachtigingen opvolgen",
   "ratification-add": "Bekrachtiging uploaden",
   "ratification-title": "Bekrachtiging Vlaamse Regering",
   "ratifying-mandatees": "Ondertekenende Ministers"
