--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1332,7 +1332,7 @@
   "step-and-number": "stap #{number}",
   "publication-statusses": "Publicatiestatussen",
   "decreet-info": "Decreet info",
-  "newest-documents": "Nieuwste Documenten",
+  "newest-documents": "Nieuwste documenten",
   "document-versions": "Document versies",
   "agenda-activities": "Agenderingen",
   "approved-on-agenda-of": "Goedgekeurd op de agenda van",
