--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1363,5 +1363,7 @@
   "ratified-and-announced-on": "Bekrachtigd en afgekondigd op",
   "published-in-belgian-official-gazette": "Bekendgemaakt in het Belgisch Staatsblad op",
   "updated-on-date": "Geüpdatet op {date}",
-  "sent-on-date-by-person": "Verzonden op {date} door {person}"
+  "sent-on-date-by-person": "Verzonden op {date} door {person}",
+  "no-statusses-available-yet": "Er zijn nog geen statussen beschikbaar",
+  "no-documents-submitted-to-vp-yet": "Er werden nog geen documenten ingediend bij het Vlaams Parlement"
 }
