add some fixes to rushed ratification and VP features

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1364,7 +1364,7 @@
   "published-in-belgian-official-gazette": "Bekendgemaakt in het Belgisch Staatsblad op",
   "sent-on-date-by-person": "Verzonden op {date} door {person}",
   "no-statusses-available-yet": "Er zijn nog geen statussen beschikbaar",
-  "no-documents-submitted-to-vp-yet": "Er werden nog geen documenten ingediend bij het Vlaams Parlement",
+  "no-documents-submitted-to-vp-yet": "Er werden nog geen documenten doorgestuurd naar het Vlaams Parlement",
   "add-past-minister": "Vorige minister toevoegen",
   "remove-past-minister": "Vorige minister verwijderen",
   "ratification": "Bekrachtiging",
