feat: display authority domain and themes

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1372,5 +1372,6 @@
   "ratifications-ongoing": "Bekrachtigingen opvolgen",
   "ratification-add": "Bekrachtiging uploaden",
   "ratification-title": "Bekrachtiging Vlaamse Regering",
-  "ratifying-mandatees": "Ondertekenende Ministers"
+  "ratifying-mandatees": "Ondertekenende Ministers",
+  "authority-domain": "Bevoegdheidsdomein"
 }
