KAS-4621 change translation

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1371,7 +1371,7 @@
   "ratifications": "Bekrachtigingen",
   "ratifications-ongoing": "Bekrachtigingen opvolgen",
   "ratification-add": "Bekrachtiging uploaden",
-  "ratification-title": "Bekrachtiging Vlaamse Regering",
+  "ratification-title": "Bekrachtiging en afkondiging",
   "ratifying-mandatees": "Ondertekenende Ministers",
   "authority-domain": "Bevoegdheidsdomein"
 }
